修改登录密码input表单为password 修改登录成功后下拉菜单中的个人/帮助/退出 新增邀请码查询信息js

--- a/src/main/resources/templates/common/top.html
+++ b/src/main/resources/templates/common/top.html
@@ -105,18 +105,18 @@
                     </a>
                     <ul class="dropdown-menu profile animated fadeIn">
                         <li>
-                            <a href="account-confirmation.html">
+                            <a th:href="@{/sys/gosettings}">
                                 <i class="fa fa-wrench"></i> 账户设置
                             </a>
                         </li>
 
                         <li>
-                            <a href="ui-support.html">
+                            <a th:href="@{/sys/gofaq}">
                                 <i class="fa fa-info"></i> 用户帮助
                             </a>
                         </li>
                         <li class="last">
-                            <a href="ui-login.html">
+                            <a href="javascript:void(0);" onclick="LoginFunc.doLogout();">
                                 <i class="fa fa-lock"></i> 退出
                             </a>
                         </li>
