--- a/src/main/resources/templates/sys/regist-filecoin.html
+++ b/src/main/resources/templates/sys/regist-filecoin.html
@@ -43,24 +43,24 @@
 							<h4>邮箱激活</h4>
 						</div>
 					</li>
-					<li>
-						<div class="step_inner fr">
-							<span class="icon_step">3</span>
-							<h4>绑定手机</h4>
-						</div>
-					</li>
-                    <li>
-						<div class="step_inner fr">
-							<span class="icon_step">4</span>
-							<h4>完善矿工资料</h4>
-						</div>
-					</li>
-                       <li>
-						<div class="step_inner fr">
-							<span class="icon_step">4</span>
-							<h4>邀请注册</h4>
-						</div>
-					</li>
+					<!--<li>-->
+						<!--<div class="step_inner fr">-->
+							<!--<span class="icon_step">3</span>-->
+							<!--<h4>绑定手机</h4>-->
+						<!--</div>-->
+					<!--</li>-->
+                    <!--<li>-->
+						<!--<div class="step_inner fr">-->
+							<!--<span class="icon_step">4</span>-->
+							<!--<h4>完善矿工资料</h4>-->
+						<!--</div>-->
+					<!--</li>-->
+                       <!--<li>-->
+						<!--<div class="step_inner fr">-->
+							<!--<span class="icon_step">4</span>-->
+							<!--<h4>邀请注册</h4>-->
+						<!--</div>-->
+					<!--</li>-->
                     
 				</ol>
 				<div class="step_line"></div>
