--- a/src/main/resources/templates/sys/login.html
+++ b/src/main/resources/templates/sys/login.html
@@ -85,14 +85,14 @@
                                 <div class="form-group">
                                     <label class="form-label">密码：</label>
                                     <div class="controls">
-                                        <input type="text" class="form-control" id="password" name="password" value="" placeholder="password">
+                                        <input type="password" class="form-control" id="password" name="password" value="" placeholder="password">
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <label class="form-label">验证码：</label>
                                     <div class="controls">
-                                        <input type="text" name="captcha" class="frm_input verifyCode" maxlength="5"/>
+                                        <input type="text" id="captcha" name="captcha" class="frm_input verifyCode" maxlength="5"/>
                                         <img id="captchaImgId" th:src="@{/captcha.jpg}" alt="" />
                                         <a class="changeVerifyCode" href="javascript:void(0);" onclick = "getCaptcha();">换一张</a>
                                     </div>
@@ -165,6 +165,9 @@
                 },
                 password: {
                     required: true
+                },
+                captcha: {
+                    required: true
                 }
             },
             messages: {
@@ -173,6 +176,9 @@
                 },
                 password: {
                     required: "请输入密码!"
+                },
+                captcha: {
+                    required: "请输入验证码!"
                 }
             }
         });
