修改用户激活方法,update时需要setPassword为null,以便于不修改密码,否则会有bug;问题已解决

--- a/src/main/resources/templates/sys/login.html
+++ b/src/main/resources/templates/sys/login.html
@@ -16,7 +16,7 @@
     <meta http-equiv="expires" content="0">
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Cryptonia : Bitcoin & Cryptocurrency trading Dashboard</title>
+    <title>IPFS星际云矿池</title>
     <meta content="" name="description" />
     <meta content="" name="author" />
 
