修改用户激活方法,update时需要setPassword为null,以便于不修改密码,否则会有bug;问题已解决

--- a/src/main/resources/templates/sys/highway.html
+++ b/src/main/resources/templates/sys/highway.html
@@ -102,7 +102,7 @@
                                         <i class='pull-left icon-luck_draw icon-white icon-md icon-primary mt-10'></i>
                                         <div class="stats">
                                             <h3 class="color-white mb-5" id="invitationLotteryCode_h3">抽奖码：E3RT3D</h3>
-                                            <span>再邀请<span class="systeminfo">10</span>人后可参与抽奖活动，奖品IPFS矿机一台.</span>
+                                            <span>再邀请<span class="systeminfo" id="invitationCode_h3_lit_3">10</span>人后可参与抽奖活动，奖品IPFS矿机一台.</span>
                                         </div>
                                     </div>
                                 </div>
