--- a/src/main/resources/templates/emailTemplate.html
+++ b/src/main/resources/templates/emailTemplate.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         您好,这是验证邮件,请点击下面的链接完成验证,
-        <a href="javascript:void(0);" th:href="@{ http://{url}/filecoin-app/sys/activation/{id}/{timestamp}?{other}(url=${url},id=${id},timestamp=${timestamp},other=${other}) }">激活账号</a>。
+        <a href="#" th:href="@{ http://{url}/filecoin-app/sys/activation/{id}/{timestamp}?{other}(url=${url},id=${id},timestamp=${timestamp},other=${other}) }">激活账号</a>。
     </body>
 </html>
