修改index首页,将没显示出来的图标搞上去

--- a/src/main/resources/templates/sys/index-filecoin.html
+++ b/src/main/resources/templates/sys/index-filecoin.html
@@ -163,7 +163,7 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"> <a th:href="@{/filecoin/images/blog/blog01.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog01.jpg"> <img src="filecoin/images/blog/blog01.jpg"  alt="Bitcoin"></a> </div>
+              <div class="thumb post-img"> <a th:href="@{/filecoin/images/blog/blog01.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog01.jpg"> <img th:src="@{/filecoin/images/blog/blog01.jpg}"  alt="Bitcoin"></a> </div>
             </div>
             <div class="post-info mt_20 ">
               <h2 class="mb_10"> <a href="#">IPFS的野心有点大：各种区块链实现相互浏览，打造“星际区块链网络”</a> </h2>
@@ -175,7 +175,7 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog03.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog03.jpg"> <img src="filecoin/images/blog/blog03.jpg"  alt="Bitcoin"></a></div>
+              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog03.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog03.jpg"> <img th:src="@{/filecoin/images/blog/blog03.jpg}"  alt="Bitcoin"></a></div>
             </div>
             <div class="post-info mt_20 ">
               <h2 class="mb_10"> <a href="#">戴嘉乐：详解IPFS的本质、技术架构以及应用</a> </h2>
@@ -186,7 +186,7 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog04.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog04.jpg"> <img src="filecoin/images/blog/blog04.jpg"  alt="Bitcoin"></a></div>
+              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog04.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog04.jpg"> <img th:src="@{/filecoin/images/blog/blog04.jpg}"  alt="Bitcoin"></a></div>
             </div>
             <div class="post-info mt_20 ">
               <h2 class="mb_10"> <a href="#">IPFS是什么？为什么说它将取代HTTP？</a> </h2>
@@ -198,7 +198,7 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog05.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog05.jpg"> <img src="filecoin/images/blog/blog05.jpg"  alt="Bitcoin"></a></div>
+              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog05.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog05.jpg"> <img th:src="@{/filecoin/images/blog/blog05.jpg}"  alt="Bitcoin"></a></div>
             </div>
             <div class="post-info mt_20 ">
               <h2 class="mb_10"> <a href="#">区块链“瘦云”或取代传统云技术</a> </h2>
@@ -209,7 +209,7 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog06.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog06.jpg"> <img src="filecoin/images/blog/blog06.jpg"  alt="Bitcoin"></a></div>
+              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog06.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog06.jpg"> <img th:src="@{/filecoin/images/blog/blog06.jpg}"  alt="Bitcoin"></a></div>
             </div>
             <div class="post-info mt_20 ">
               <h2 class="mb_10"> <a href="#">微奇点已到来，IPFS 协议将重构互联网</a> </h2>
@@ -220,7 +220,7 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog07.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog07.jpg"> <img src="filecoin/images/blog/blog07.jpg"  alt="Bitcoin"></a></div>
+              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog07.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog07.jpg"> <img th:src="@{/filecoin/images/blog/blog07.jpg}"  alt="Bitcoin"></a></div>
             </div>
             <div class="post-info mt_20 ">
               <h2 class="mb_10"> <a href="#">Alexandria 与LBRY的较量——谁将主导下一代的文件共享应用领域</a> </h2>
@@ -231,7 +231,7 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog08.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog08.jpg"> <img src="filecoin/images/blog/blog08.jpg"  alt="Bitcoin"></a></div>
+              <div class="thumb post-img"><a th:href="@{/filecoin/images/blog/blog08.jpg}" title="Beautiful Lady" data-source="filecoin/images/blog/blog08.jpg"> <img th:src="@{/filecoin/images/blog/blog08.jpg}"  alt="Bitcoin"></a></div>
 
             </div>
             <div class="post-info mt_20 ">
