增加返回修改逻辑,返回可修改邮箱地址,并进行测试

--- a/src/main/resources/templates/sys/regist-filecoin.html
+++ b/src/main/resources/templates/sys/regist-filecoin.html
@@ -71,7 +71,7 @@
 						<div class="frm_control_group">
 							<label class="frm_label">邮箱</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input email" maxlength="32" value="jkgao008@163.com"/>
+								<input type="text" name="" class="frm_input email" maxlength="32" value=""/>
 								<p class="frm_tips">作为登录帐号，请填写未注册的邮箱</p>
 						  </div>
 						</div>
@@ -79,7 +79,7 @@
                         <div class="frm_control_group">
 							<label class="frm_label">内测邀请码</label>
 							<div class="frm_controls">
-								<input type="text" id="vcode" name="vcode" class="frm_input email" maxlength="32" value="111111"/>
+								<input type="text" id="vcode" name="vcode" class="frm_input email" maxlength="32" value=""/>
 								<p class="changeVerifyCode">您必须输入邀请码才能注册。如没有请加QQ群：22138062 获取。</p>
 						  </div>
 						</div>
@@ -87,14 +87,14 @@
 						<div class="frm_control_group">
 							<label class="frm_label">密码</label>
 							<div class="frm_controls">
-								<input type="password" name="" class="frm_input passwd" value="111111"/>
+								<input type="password" name="" class="frm_input passwd" value=""/>
 								<p class="frm_tips">字母、数字或者英文符号，最短6位，区分大小写</p>
 							</div>
 						</div>
 						<div class="frm_control_group">
 							<label class="frm_label">再次输入密码</label>
 							<div class="frm_controls">
-								<input type="password" name="" class="frm_input passwd2" value="111111"/>
+								<input type="password" name="" class="frm_input passwd2" value=""/>
 							</div>
 						</div>
 						<div class="frm_control_group">
@@ -118,7 +118,7 @@
 							<a class="btn btn_primary mt20" href="javascript:;">登录邮箱</a>
 						</p>
 						<p class="c7b mt20">没有收到邮件？</p>
-						<p>1. 请检查邮箱地址是否正确，你可以返回 <a href="#" class="c46">重新填写</a></p>
+						<p>1. 请检查邮箱地址是否正确，你可以返回 <a href="#" onclick="RegistFunc.getEditMailUser();" class="c46">重新填写</a></p>
 						<p>2. 检查你的邮件垃圾箱</p>
 						<p>3. 若仍未收到确认，请尝试 <a href="#" onclick="RegistFunc.resendMail(this);" class="c46">重新发送</a></p>
 					</div>
@@ -228,8 +228,9 @@
 				</div><!-- // step5 end -->
 			</div>
 		</div><!-- // container end -->
-		<input type="hidden" name="user_id" id="user_id" value="460894143359483904"/>
-		<input type="hidden" name="user_mail" id="user_mail" value="316955509@qq.com"/>
+		<input type="hidden" name="user_id" id="user_id" value=""/>
+		<input type="hidden" name="user_mail" id="user_mail" value=""/>
+		<input type="hidden" name="regist_type" id="regist_type" value="C"/>
 		<footer id="footer" class="w960 oh">
 		
 			</nav>
