增加注册后进入邮件发送页面意外关闭页面后的处理 可以重新进入注册页面输入注册过的状态为待激活的邮箱信息,会自动跳转到相关页面,但邮件需要自己再次发送

--- a/src/main/resources/templates/sys/login.html
+++ b/src/main/resources/templates/sys/login.html
@@ -114,6 +114,8 @@
                 <a class="pull-right" th:href="@{/sys/goregist}" title="Sign Up">用户注册</a>
             </p>
 
+            <input type="hidden" name="userId" id="userId" value=""/>
+            <input type="hidden" name="userMail" id="userMail" value=""/>
         </div>
     </div>
 </div>
