增加实时交易所信息

--- a/src/main/resources/templates/sys/highway.html
+++ b/src/main/resources/templates/sys/highway.html
@@ -60,7 +60,7 @@
                                         <div class="icon-after icon-invitea"></div>
                                         <i class='pull-left icon-invitea icon-md icon-white mt-10'></i>
                                         <div class="stats">
-                                          <h3 class="color-white mb-5" id="invitationCode_h3">邀请码：E3RT3D </h3>
+                                          <h3 class="color-white mb-5" id="invitationCode_h3">邀请码： </h3>
                                             <span>邀请新人注册使用。限使用10次，剩余邀请<span class="systeminfo" id="invitationCode_h3_lit">10</span>次。</span>
                                         </div>
                                     </div>
@@ -71,18 +71,18 @@
                                         <i class='pull-left icon-invite icon-md icon-white mt-10'></i>
                                         <div class="stats">
                                             <h3 class="color-white mb-5" id="invitationCount_h3">邀请人数：0 / 10</h3>
-                                            <span>邀请好友费率最高0折，还能邀请<span class="systeminfo" id="invitationCode_h3_lit_2">10</span>人。</span>
+                                            <span>邀请好友费率最高0折，还能邀请<span class="systeminfo" id="invitationCode_h3_lit_2"></span>人。</span>
                                         </div>
                                     </div>
                                 </div>
-                                
+
                                 <div class="col-lg-4 col-sm-6 col-xs-12">
                                     <div class="r4_counter db_box has-gray-to-right-bottom">
                                         <div class="icon-after icon-coupon"></div>
                                         <i class='pull-left icon-coupon icon-md icon-white mt-10'></i>
                                         <div class="stats">
                                             <h3 class="color-white mb-5">折扣券：300 元</h3>
-                                            <span>价值 300元 , 再邀请<span class="systeminfo" id="invitationCountLit_h3">10</span>人后可用，限购买矿机使用。</span>
+                                            <span>价值 300元 , 再邀请<span class="systeminfo" id="invitationCountLit_h3"></span>人后可用，限购买矿机使用。</span>
                                         </div>
                                     </div>
                                 </div>
@@ -91,7 +91,7 @@
                                         <div class="icon-after icon-loading_percentage"></div>
                                         <i class='pull-left icon-loading_percentage icon-md icon-white icon-primary mt-10'></i>
                                         <div class="stats">
-                                            <h3 class="color-white mb-5" id="invitationRate_h3">执行费率：5 %</h3>
+                                            <h3 class="color-white mb-5" id="invitationRate_h3">执行费率： %</h3>
                                             <span>有效期主网上线一个月。剩余<span class="systeminfo">30</span>天。</span>
                                         </div>
                                     </div>
@@ -101,12 +101,12 @@
                                         <div class="icon-after icon-luck_draw"></div>
                                         <i class='pull-left icon-luck_draw icon-white icon-md icon-primary mt-10'></i>
                                         <div class="stats">
-                                            <h3 class="color-white mb-5" id="invitationLotteryCode_h3">抽奖码：E3RT3D</h3>
-                                            <span>再邀请<span class="systeminfo" id="invitationCode_h3_lit_3">10</span>人后可参与抽奖活动，奖品IPFS矿机一台.</span>
+                                            <h3 class="color-white mb-5" id="invitationLotteryCode_h3">抽奖码：</h3>
+                                            <span>再邀请<span class="systeminfo" id="invitationCode_h3_lit_3"></span>人后可参与抽奖活动，奖品IPFS矿机一台.</span>
                                         </div>
                                     </div>
                                 </div>
-                                
+
                                 <div class="col-lg-4 col-sm-6 col-xs-12">
                                     <div class="r4_counter db_box has-gift-to-right-bottom">
                                         <div class="icon-after icon-luck_drawb"></div>
@@ -132,16 +132,16 @@
                                 <h2 class="title pull-left">邀请好友规则：</h2>
                                 <div class="actions panel_actions pull-right">
                                     <a class="box_toggle fa fa-chevron-down"></a>
-                                    
+
                                     <a class="box_close fa fa-times"></a>
                                 </div>
                             </header>
-                            <div class="content-body">    
+                            <div class="content-body">
                                 <div class="row">
                                     <div class="col-lg-4">
                                         <div class="text-center no-mt no-mb">
                                             <div class="text-left">
-                                                
+
                                                                                             </div>
                                             <div class="col-xs-12 no-pl no-pr">
                                                 <div class="col-xs-1 no-pl no-pr">
@@ -245,14 +245,14 @@
                                             </div>
                                             <div class="clearfix"></div>
                                             <div class="text-left mt-20">
-                                                <h5 class="no-mb">费率有效期为主网上线一个月内。</h5> 
+                                                <h5 class="no-mb">费率有效期为主网上线一个月内。</h5>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-8">
                                         <img th:src="@{/filecoin/data/dashelements/affiliate-img.png}" alt="" width="835" height="418" class="aff-img img-responsive">
                                     </div>
-                                   
+
                                 </div>
                             </div>
                     </section>
@@ -271,14 +271,14 @@
                                 <h2 class="title pull-left">矿机抽奖活动</h2>
                                 <div class="actions panel_actions pull-right">
                                     <a class="box_toggle fa fa-chevron-down"></a>
-                                    
+
                                     <a class="box_close fa fa-times"></a>
                                 </div>
                             </header>
-                            <div class="content-body">    
+                            <div class="content-body">
                                 <div class="row">
                                     <div class="col-lg-8">
-                                        <h4 class="bold no-mt" id="invitationLotteryCode_h3_2">您的抽奖码为：E3RT3D</h4>
+                                        <h4 class="bold no-mt" id="invitationLotteryCode_h3_2">您的抽奖码为：</h4>
                                         <h4 class="mb-10"><small>邀请10名好友注册后，即有资格参加矿机抽奖活动</small></h4>
                                     </div>
                                     <div class="clearfix"></div>
